--- a/src/style.css
+++ b/src/style.css
@@ -698,7 +698,7 @@ section {
 
 .grid-list-wrapper {
 	display: grid;
-	row-gap: var(--space-2);
+	gap: calc(var(--gap-y) * 2) var(--gap-x);
 	overflow: hidden;
 	padding: var(--space-05);
 
@@ -707,14 +707,6 @@ section {
 	text-wrap: nowrap;
 
 	color: var(--color-font-2);
-}
-
-.grid-list {
-	display: grid;
-	grid-column: 1 / calc(var(--colums, 4) + 1);
-	grid-template-columns: subgrid;
-
-	/* overflow: hidden; */
 
 	--gap-y: var(--space-1);
 	--gap-x: var(--space-3);
@@ -724,8 +716,15 @@ section {
 	--line-color-y: var(--color-app-accent);
 	--line-thickness-x: 1px;
 	--line-thickness-y: 2px;
+}
 
+.grid-list {
+	display: grid;
 	gap: var(--gap-y) var(--gap-x);
+	grid-column: 1 / calc(var(--colums, 4) + 1);
+	grid-template-columns: subgrid;
+
+	/* overflow: hidden; */
 }
 
 .grid-item-wrapper {
